...
            "value": "医疗机构"
          }
        }
      },
      "extractionState": "manual"
    },
    "Settings": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
...
            "value": "选择语言"
          }
        }
      },
      "extractionState": "manual"
    },
    "Searching Range": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Searching Range"
          }
...
            "state": "translated",
            "value": "编辑点位"
          }
        }
      }
    },
    "Bookmark place": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Bookmark place"
          }
...
            "state": "translated",
            "value": "收藏点位"
          }
        }
      }
    },
    "Share": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share"
          }
...
            "state": "translated",
            "value": "分享"
          }
        }
      }
    },
    "Navigate": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Navigate"
          }
...
            "state": "translated",
            "value": "导航"
          }
        }
      }
    },
    "Not available yet": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Not available yet"
          }
...
            "state": "translated",
            "value": "暂不可用"
          }
        }
      }
    },
    "OK": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
          }
...
